- Remove tags in unnecessary places in the theme templates - Change CSS for better appeal -

--- a/output/authors.html
+++ b/output/authors.html
@@ -18,7 +18,11 @@
 	  
 	  <header role="banner">
 	    <div class="feeds">
-	        <a href="http://ninjacomics.github.io/radioblogr/radioblogrfeeds/main.xml" rel="alternate"><img src="theme/images/icons/feed-32px.png" alt="atom feed"/></a>
+	      <a href="http://ninjacomics.github.io/radioblogr/radioblogrfeeds/main.xml" 
+		      rel="alternate"><img 
+		      src="http://ninjacomics.github.io/radioblogr/theme/images/icons/feed-32px.png" 
+		      alt="atom feed"/>
+	      </a>
 	    </div>
 	      <nav class="pages">
 			  <a href="http://ninjacomics.github.io/radioblogr/pages/about.html">About</a>
@@ -66,10 +70,10 @@
 		  Ravi Sharan - Proudly powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>. Theme <a href="https://github.com/fle/pelican-sober">pelican-sober</a>.
     	</p>
 
-	  </footer>	
+	  </footer>
 
 	</div>
-	
+
 
 </body>
 </html>
