--- a/output/authors.html
+++ b/output/authors.html
@@ -11,51 +11,64 @@
 
 
 </head>
-	
+
 <body>
 
     <div class="container">
-	  
+
 	  <header role="banner">
 	    <div class="feeds">
-	      <a href="http://ninjacomics.github.io/radioblogr/radioblogrfeeds/main.xml" 
-		      rel="alternate"><img 
-		      src="http://ninjacomics.github.io/radioblogr/theme/images/icons/feed-32px.png" 
+	      <a href="http://ninjacomics.github.io/radioblogr/radioblogrfeeds/main.xml"
+		      rel="alternate"><img
+		      src="http://ninjacomics.github.io/radioblogr/theme/images/icons/rss_b.png" 
 		      alt="atom feed"/>
 	      </a>
+
+	      <a href="https://github.com/NinjaComics"
+		      rel="alternate"><img
+		      src="http://ninjacomics.github.io/radioblogr/theme/images/icons/github_b.png"
+		      alt ="github"/>
+	      </a>
+
+	      <a href="https://plus.google.com/u/0/+RaviSharan/"
+		      rel="alternate"><img
+		      src="http://ninjacomics.github.io/radioblogr/theme/images/icons/gplus_b.png"
+		      alt="gplus"/>
+	      </a>
+
+	      <a href="mailto:bhagavathula.ravisharan@gmail.com"
+		      rel ="alternate"><img
+		      src="http://ninjacomics.github.io/radioblogr/theme/images/icons/mail_b.png"
+		      alt="mail"/>
+	      </a>
+
 	    </div>
 	      <nav class="pages">
 			  <a href="http://ninjacomics.github.io/radioblogr/pages/about.html">About</a>
 	      </nav>
 		<a href="http://ninjacomics.github.io/radioblogr" class="title">Ravi Sharan's /radio/bin/io</a>
       </header>
-	
+
 	  <div class="wrapper">
 
 		  <div role="main" class="content">
     <h1>Authors on Ravi Sharan's /radio/bin/io</h1>        <li><a href="http://ninjacomics.github.io/radioblogr/author/ravi-sharan.html">Ravi Sharan</a> (1)</li>
-		  </div>	
-		  
+		  </div>
+
 		  <div class="sidebar">
 		    <div class="sidebar-container" >
 
 
   	          <nav>
-	            <h2>Categories</h2>
+	            <h3>Categories</h3>
 	            <ul>
 	                <li ><a href="http://ninjacomics.github.io/radioblogr/category/radio.html">radio</a></li>
 	            </ul>
 	          </nav>
 
-	            <aside>
-	            <h2>Social</h2>
-			      <ul class="social">
-				    <li><a href="https://github.com/NinjaComics">Github</a><i></i></li>
-			      </ul>
-			    </aside>
 
 	            <aside>
-	              <h2>Blogroll</h2>
+	              <h3>Blogroll</h3>
 	              <ul>
 	                  <li><a href="http://www.duckduckgo.com">DDG</a></li>
 	              </ul>
@@ -67,9 +80,9 @@
 
       <footer>
 		<p role="contentinfo">
-		  Ravi Sharan - Proudly powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>. Theme <a href="https://github.com/fle/pelican-sober">pelican-sober</a>.
+		Content licensed under the Creative Commons Attribution-ShareAlike 4.0 International Public License.
+		Theme: <a href="http://www.duckduckgo.com">Modified-Pelican-Sober</a>
     	</p>
-
 	  </footer>
 
 	</div>
