Add logo info to cgran-frontend.rst

--- a/output/authors.html
+++ b/output/authors.html
@@ -30,7 +30,7 @@
 	  <div class="wrapper">
 
 		  <div role="main" class="content">
-    <h1>Authors on Ravi Sharan's /radio/bin/io</h1>        <li><a href="http://ninjacomics.github.io/radioblogr/author/ravi-sharan.html">Ravi Sharan</a> (2)</li>
+    <h1>Authors on Ravi Sharan's /radio/bin/io</h1>        <li><a href="http://ninjacomics.github.io/radioblogr/author/ravi-sharan.html">Ravi Sharan</a> (3)</li>
 		  </div>	
 		  
 		  <div class="sidebar">
@@ -40,6 +40,7 @@
   	          <nav>
 	            <h2>Categories</h2>
 	            <ul>
+	                <li ><a href="http://ninjacomics.github.io/radioblogr/category/bin.html">/bin</a></li>
 	                <li ><a href="http://ninjacomics.github.io/radioblogr/category/io.html">/io</a></li>
 	                <li ><a href="http://ninjacomics.github.io/radioblogr/category/radio.html">/radio</a></li>
 	            </ul>
