--- a/output/categories.html
+++ b/output/categories.html
@@ -31,6 +31,7 @@
 
 		  <div role="main" class="content">
 <ul>
+    <li><a href="http://ninjacomics.github.io/radioblogr/category/bin.html">/bin</a></li>
     <li><a href="http://ninjacomics.github.io/radioblogr/category/io.html">/io</a></li>
     <li><a href="http://ninjacomics.github.io/radioblogr/category/radio.html">/radio</a></li>
 </ul>
@@ -43,6 +44,7 @@
   	          <nav>
 	            <h2>Categories</h2>
 	            <ul>
+	                <li ><a href="http://ninjacomics.github.io/radioblogr/category/bin.html">/bin</a></li>
 	                <li ><a href="http://ninjacomics.github.io/radioblogr/category/io.html">/io</a></li>
 	                <li ><a href="http://ninjacomics.github.io/radioblogr/category/radio.html">/radio</a></li>
 	            </ul>
